# Modek-Gesture-Control-System

./: README.md
IoTMP-main/: README.md  arduino_client.py  pyproject.toml  service1_capture.py  service2_analysis.py
IoTMP-main/arduino/: sketch_wifi.ino
IoTMP-main/arduino/sketch/: sketch.ino
IoTMP-main/docs/: API.md  ARCHITECTURE.md  CALIBRATION.md  OPERATIONS.md  SIGNAL_PROCESSING.md
IoTMP-main/tests/: test_analysis.py  test_arduino_client.py
