[project]
name = "modek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mediapipe==0.10.14",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.10.2",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "N803",  # argument name should be lowercase (lm fn)
    "N806",  # variable in function should be lowercase
    "N802",  # Qt method overrides must keep camelCase names
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["service1_capture", "service2_analysis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
